agent新增获取任务接口
